Libreria RichFaces UI 3.3.4, Impl 3.3.4 Risolti problemi per il componente Effect.